# garment-dhu-calculator

./: .gitignore  README.md
npm/: README.md  index.d.ts  index.js  package.json  test.js
python/: README.md  pyproject.toml  test_dhu.py
python/src/garment_dhu_calculator/: __init__.py
